[tool.poetry]
name = "coffee_machine_ddd"
version = "0.1.0"
description = ""
authors = ["y.shurpik <y.shurpik@clearcode.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
